@@ -189,6 +189,8 @@ typedef struct {
     int error_override_set;
     int preserve_host;
     int preserve_host_set;
+    int timeout;
+    int timeout_set;
 
 } proxy_server_conf;
 
